@@ -8,6 +8,8 @@ Changes in dse version 2011.11-1
 
    o	updated maintainer email address.
 
+   o	Changed package.description() to packageDescription() in DSEversion().
+
 Changes in dse version 2011.3-1
 
    o	Changed periods() and tfperiods() to Tobs() to be consistent with
